--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,15 @@ node_modules/
 __pycache__/
 *.pyc
 .env
+.env.local
 .venv
 venv/
 .vscode/
 .idea/
 .DS_Store
+
+# Blockchain / Foundry
+contracts/out/
+contracts/cache/
+contracts/broadcast/
+*.keystore
