fix: corregir overflow en NaviFairy thought bubble y eliminar espacio extra en TimeBlockPlanner
- NaviFairy: cambiar max-w-xs whitespace-nowrap por w-64 con break-words
- TimeBlockPlanner: eliminar h-full y flex-1 para ajustar altura al contenido
- page.tsx: quitar min-h-[85vh] del contenedor del planner
- README.md: reescribir con instrucciones claras para Git Bash, PowerShell y Mac
- pd.md: cambiar politica de navegador a no abrir automaticamente

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,6 +4,7 @@
 
 # Private key for signing reward claims (NEVER COMMIT THIS!)
 # Use a dedicated wallet for backend operations
+# To generate a new key, run: python -c "from eth_account import Account; acc = Account.create(); print(f'Private Key: {acc.key.hex()}\nAddress: {acc.address}')"
 SIGNER_PRIVATE_KEY=0x...
 
 # RPC URLs
@@ -21,3 +22,10 @@ ACHIEVEMENT_NFT_ADDRESS=
 
 MONGODB_URI=mongodb://localhost:27017
 DB_NAME=lvlup
+
+# ===========================================
+# 🤖 GOOGLE GEMINI AI CONFIGURATION
+# ===========================================
+
+# Get your FREE API key at https://ai.google.dev
+GEMINI_API_KEY=your_gemini_api_key_here
