--- a/contracts/.env.example
+++ b/contracts/.env.example
@@ -3,11 +3,11 @@
 # ===========================================
 
 # Deployer private key (NEVER COMMIT!)
-PRIVATE_KEY=0x...
+PRIVATE_KEY=your_private_key_here_do_not_commit
 
 # RPC URLs
 BASE_SEPOLIA_RPC_URL=https://sepolia.base.org
 BASE_RPC_URL=https://mainnet.base.org
 
-# BaseScan API key for contract verification
-BASESCAN_API_KEY=your_api_key_here
+# Etherscan/BaseScan API key for contract verification (API V2 multi-chain)
+ETHERSCAN_API_KEY=your_etherscan_api_key
