--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -3,6 +3,9 @@ src = "src"
 out = "out"
 libs = ["lib"]
 solc = "0.8.24"
+optimizer = true
+optimizer_runs = 200
+remappings = ["@openzeppelin/=lib/openzeppelin-contracts/"]
 
 [rpc_endpoints]
 base_sepolia = "${BASE_SEPOLIA_RPC_URL}"
