--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "playwright-core": "^1.58.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "recharts": "^3.7.0",
     "tailwind-merge": "^3.4.0",
     "viem": "^2.45.1",
     "wagmi": "^2.19.5",
